# TypeScriptCompiler

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .travis.yml  3rdParty_cleanup.bat  LICENSE  README.md  build_llvm_debug.bat  build_llvm_release.bat  build_mlir_debug.bat  build_mlir_release.bat  build_tslang_release.txt  cleanup.bat  config_llvm_debug.bat  config_llvm_release.bat  config_mlir_debug.bat  config_mlir_release.bat  fixes.txt  index.md  prepare_3rdParty.bat  prepare_3rdParty.sh  prepare_3rdParty_debug.sh  prepare_3rdParty_lldb.bat  prepare_3rdParty_release.sh  prepare_3rdParty_wasm_debug.sh  tag.bat  tag_del.bat  tsc.code-workspace  tslang.code-workspace
docs/how/cmake/gc_example/: CMakeLists.txt  (+4 more)
docs/how/cmake_bgfx/: CMakeLists.txt  CMakePresets.json  README.md
docs/how/cmake_tslang/: CMakeLists.txt  CMakePresets.json  README.md  adder.ts  main.cpp  mycode.ts
docs/how/cmake_winapp/: CMakeLists.txt  config_debug.bat  config_llvm_debug.bat  config_release.bat  typescript.cmake
docs/how/custom_lang/: CMakeLists.txt  README.md  mycode.foo
tsc/: CMakeLists.txt  CMakePresets.json  README.md  build_tsc.bat  build_tsc_debug-test.bat  build_tsc_debug-test.sh  build_tsc_debug-unittests.bat  build_tsc_debug.bat  build_tsc_debug.sh  build_tsc_defaultlib_debug.bat  build_tsc_defaultlib_release.bat  build_tsc_release-test.bat  build_tsc_release-test.sh  build_tsc_release.bat  build_tsc_release.sh  config_tsc.bat  config_tsc_debug.bat  config_tsc_debug.sh  config_tsc_release.bat  config_tsc_release.sh  tsc.natvis
tsc/cmake/: config_macros.cmake  grammar_generator.cmake
tsc/include/TypeScript/: AST.h  AliasPass.h  AsyncDialectTranslation.h  CMakeLists.txt  CommonGenLogic.h  Config.h  DOM.h  DataStructs.h  DeclarationPrinter.h  Defines.h  DiagnosticHelper.h  EnumsAST.h  ExportFixPass.h  FunctionPass.h  Helper.h  InitializeTypeScriptExceptionPass.h  LandingPadFixPass.h  Lexer.h  LoadBoundPropertiesInterface.h  LoadBoundPropertiesInterface.td  LowerToLLVMLogic.h  MLIRGen.h  MLIRGenContext.h  MLIRGenHelpers.h  MLIRGenLogic.h  MemAllocFixPass.h  NeededDialectsToLLVMIRTranslation.h  ObjDumper.h  Parser.h  Passes.h  TypeScriptDialect.h  TypeScriptDialect.td  TypeScriptDialectTranslation.h  TypeScriptExceptionPass.h  TypeScriptFunctionPass.h  TypeScriptGC.h  TypeScriptOps.h  TypeScriptOps.td  TypeScriptPassContext.h  TypeScriptTypes.h  (+5 more)
tsc/lib/: CMakeLists.txt
tsc/lib/TypeScript/: AST.cpp  AsyncDialectTranslation.cpp  CMakeLists.txt  DeclarationPrinter.cpp  DiagnosticHelper.cpp  GCPass.cpp  LoadBoundPropertiesPass.cpp  LowerToAffineLoops.cpp  LowerToAffineSwitchStates.cpp  LowerToLLVM.cpp  LowerToLLVMLogic.cpp  MLIRGen.cpp  MemAllocPass.cpp  NeededDialectsToLLVMIRTranslation.cpp  ObjDumper.cpp  RelocateConstantAndAllocsPass.cpp  RelocateConstantPass.cpp  TypeScriptDialect.cpp  TypeScriptDialectTranslation.cpp  TypeScriptOps.cpp  TypeScriptToLLVMIRTranslation.cpp  TypeScriptTypes.cpp
tsc/lib/TypeScriptAliasPass/: AliasPass.cpp
tsc/lib/TypeScriptAsyncRuntime/: AsyncRuntime.cpp  CMakeLists.txt
tsc/lib/TypeScriptDebugInfoPass/: CMakeLists.txt  DebugInfoPatchPass.cpp
tsc/lib/TypeScriptExceptionPass/: CMakeLists.txt  InitializeTypeScriptExceptionPass.cpp  LandingPadFixPass.cpp  TypeScriptExceptionPass.cpp  Win32ExceptionPass.cpp
tsc/lib/TypeScriptExportPass/: CMakeLists.txt  ExportFixPass.cpp
tsc/lib/TypeScriptGC/: CMakeLists.txt  TypeScriptGC.cpp  TypeScriptGCPrinter.cpp
tsc/lib/TypeScriptGCWrapper/: CMakeLists.txt  TypeScriptGC.cpp  gc.cpp
tsc/lib/TypeScriptMemAllocFixPass/: CMakeLists.txt  MemAllocFixPass.cpp
tsc/lib/TypeScriptMemAllocPass/: CMakeLists.txt  MemAllocFixPass.cpp
tsc/lib/TypeScriptRuntime/: AsyncRuntime.cpp  CMakeLists.txt  MemRuntime.cpp  TypeScriptGC.cpp  gc.cpp  mlir_init.cpp
tsc/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tsc/test/TypeScript/: test.ts  tsc-translate.mlir
tsc/test/lexer/: CMakeLists.txt  helper.h  test-lexer.cpp
tsc/test/parser/: CMakeLists.txt  test-parser.cpp
tsc/test/print-tester/: printer-tester.cpp
tsc/test/regression/: CMakeLists.txt  lit.site.cfg.py.in
tsc/test/tester/: CMakeLists.txt  helper.h  test-runner.cpp  test-runner2.cpp
tsc/tools/: CMakeLists.txt
tsc/tools/tsc-driver/: CMakeLists.txt  driver.cpp
tsc/ts-new-parser/: core.h  diagnostics.h  parser.h  parser_fwd_types.h  parser_types.h  scanner.h
tsc/tsc/: 1.ll  CMakeLists.txt  compile.bat  compile.cpp  declarationInline.cpp  defaultlib.cpp  dump.cpp  exe.cpp  gc.cpp  jit.cpp  obj.cpp  opts.cpp  rt.cpp  test_run.mlir  transform.cpp  tsc.cpp  utils.cpp  vscode.cpp
tsc/tsc-grammar/: CMakeLists.txt  TypeScriptLexerANTLR.g4  TypeScriptParserANTLR.g4
tsc/tsc-new-parser/: CMakeLists.txt  config.h  core.h  debug.h  diagnostics.h  dump.h  enums.h  file_helper.h  incremental_parser.cpp  incremental_parser.h  nodeFactory,h  nodeFactory.cpp  nodeFactory.h  nodeTest.h  node_factory.cpp  node_factory.h  node_test.h  parenthesizer_rules.cpp  parenthesizer_rules.h  parser.cpp  parser.h  parser_fwd_types.h  parser_fwd_types2.h  parser_jdoc.cpp  parser_jdoc.h  parser_run.cpp  parser_types.h  parser_types2.h  run.cpp  scanner.cpp  scanner.h  scanner_enums.h  scanner_run.cpp  types.h  undefined.h  utilities.h
tsc/tsc-opt/: CMakeLists.txt  tsc-opt.cpp
tsc/tsc-parser/: CMakeLists.txt  diagnostics.h  parser.cpp  scanner.cpp  scanner.h
tsc/tsc-translate/: CMakeLists.txt  tsc-translate.cpp
tsc/tslang/: CMakeLists.txt  TextDiagnostic.cpp  opts.cpp  tslang.cpp  utils.cpp  vscode.cpp
tsc/unittests/: CMakeLists.txt
tsc/unittests/Example/: CMakeLists.txt  Example.cpp
tsc/unittests/MLIRGen/: CMakeLists.txt  TypeToString.cpp
tslang/ts-new-parser/: CMakeLists.txt  config.h  debug.h  dump.h  enums.h  file_helper.h  node_factory.cpp  parser_fwd_types.h  scanner.cpp  scanner_enums.h  scanner_run.cpp  undefined.h  utilities.h
tslang/tslang/: CMakeLists.txt  TextDiagnosticPrinter.cpp  cmake.cpp  compile.cpp  declarationInline.cpp  defaultlib.cpp  dump.cpp  exe.cpp  jit.cpp  obj.cpp  opts.cpp  transform.cpp  tslang.cpp  vscode.cpp
(+991 files in other folders)
